images almost all fixed. still fixing overflow of css, responsive and navigation

--- a/public/stylesheets/headshots.css
+++ b/public/stylesheets/headshots.css
@@ -6,10 +6,9 @@
 
 .enlarge {
     position: absolute;
-    width: 100% !important;
-    height: 80% !important;
-    /* top: center;
-    right: center */
+    width: 80% !important;
+    height: 50% !important;
+    top: center;
 }
 
 .dimHeadshot {
@@ -28,7 +27,7 @@
     align-content: start;
     overflow: scroll;
     scroll-behavior: smooth;
-    position: relative;
+    /* position: relative; */
 }
 
 
@@ -44,7 +43,7 @@
     /* background-position: top; */
     /* width: 500px;
     height: 300px; */
-    background: url("../../images/headshots/headshot1.jpg");
+    background: url("../images/headshots/headshot1.jpg");
     background-size: cover;
     border-radius: 3px;
     width: 35vw;
@@ -142,7 +141,7 @@
     /* max-height: 160px; */
 }
 
-#headshot-image-container10 {
+/* #headshot-image-container10 {
     background-position: top;
     background-image: url("../images/headshots/headshot10.jpg");
     background-size: cover;
@@ -150,16 +149,8 @@
     width: 35vw;
     height: auto;
     height: 182px;
-    /* max-height: 160px; */
-}
-
-
-/* #headshot-image-container img {
-    border-radius: 3px;
-    width: 40vw;
-    height: auto;
-    max-height: 160px;
 } */
+
 
 
 
@@ -176,7 +167,11 @@
 
 
 
+
+
 @media (min-width:600px) {
+
+
     .enlarge {
         position: absolute;
         width: 50% !important;
@@ -186,22 +181,9 @@
         right: center
     }
 
-    #headshots-container {
-        width: 100%;
-        height: 100%;
-        display: Flex;
-        flex-flow: row wrap;
-        justify-content: space-evenly;
-        align-items: center;
-        align-content: start;
-        overflow: scroll;
-        scroll-behavior: smooth;
-        position: relative;
-    }
-
-
     #headshots-container>* {
         border-radius: 15px;
+        background-size: 100% auto;
     }
 
 
@@ -209,22 +191,9 @@
         background-position: center;
     }
 
-    #headshots-container {
-        width: 100%;
-        height: 100%;
-        display: Flex;
-        flex-flow: row wrap;
-        justify-content: space-evenly;
-        align-items: center;
-        align-content: start;
-        overflow: scroll;
-        scroll-behavior: smooth;
-        position: relative;
-    }
-
     #headshots-container>* {
-        width: 40vw;
-        height: 250px;
+        width: 300px;
+        height: 300px;
     }
 
 }
@@ -233,9 +202,23 @@
 @media (min-width: 992px) {
 
 
+    /* #right-container {
+        height: 75vh
+    } */
+
     #headshots-container>* {
-        width: 30%;
-        height: 250px;
+        /* background-size: 150px; */
+        width: 300px;
+        height: 300px;
+    }
+
+    .enlarge {
+        width: 500px !important;
+        height: 500px !important;
+        background-size: contain;
+        background-repeat: none !important;
+        /* top: center;
+        right: center */
     }
 
 }
@@ -245,17 +228,13 @@
 @media (min-width: 1200px) {
 
     .enlarge {
-        position: absolute;
-        width: 25% !important;
-        height: 100%;
-        background-size: contain;
-        /* top: center;
-        right: center */
+        width: 600px !important;
+        height: 600px !important;
     }
 
     #headshots-container>* {
-        width: 25%;
-        height: 250px;
+        width: 300px;
+        height: 300px;
     }
 
 }
