--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -72,7 +72,6 @@ header {
 
 .title-major-container {
     justify-content: center;
-    padding-left: 10px;
     width: 100%;
 }
 
