--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -169,7 +169,6 @@ header {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding-left: 10px;
 }
 
 
@@ -402,6 +401,9 @@ footer {
 @media (min-width:600px) {
 
 
+  .social-links-tablet {
+    display: none !important;
+  }
 
   #left-container header {
     justify-content: flex-start;
@@ -505,7 +507,6 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding-left: 10px;
   }
 
 
@@ -560,6 +561,9 @@ footer {
     color: black;
   }
 
+  #title-container {
+    padding: 0px !important;
+  }
 }
 
 
@@ -567,28 +571,31 @@ footer {
 
 @media (min-width: 992px) {
 
+
+  #title-container,
+  #title-major-container {
+    padding: 0px !important;
+  }
+
+
   body {
     justify-content: flex-start;
   }
 
   #navbar-tablet {
-    /* padding: 10px; */
     width: 80vw;
     display: flex;
     flex-flow: row;
     justify-content: space-evenly;
   }
 
-  #navbar-tablet li {
-    margin: 0px 5px;
+  #navbar-tablet a {
+    max-width: 200px;
   }
 
-
-
   #main-section {
-    height: 100vh;
+    height: 70%;
     width: 100vw;
-    /* overflow: hidden; */
     flex-flow: row wrap;
     scroll-behavior: smooth;
   }
@@ -596,12 +603,11 @@ footer {
 
   #left-container {
     width: 100%;
-    height: 25vh;
+    height: 30%;
   }
 
 
   #right-container {
-    height: auto;
     width: 100vw;
     background: none;
     height: 100%;
@@ -619,27 +625,19 @@ footer {
     width: 33%;
   }
 
-  .social-links-tablet {
-    width: 100%;
-    position: absolute;
-    right: center !important;
-    top: 0;
-    height: 20px;
-  }
 
   .navbar-tablet li:hover {
     cursor: pointer;
     color: #6b6868;
   }
 
+
   footer {
-    display: none;
+    /* display: none; */
+    position: sticky;
+    background: white;
   }
 
-
-  #title-container {
-    margin-top: 20px;
-  }
 }
 
 
@@ -648,7 +646,7 @@ footer {
 
 
   #title-container {
-    margin-top: 20px;
+    padding: 0px !important;
   }
 
   #desktop-landing-images {
